--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=pa123
+DB_PASSWORD=ps13831383
 DB_NAME=traceroute_db
 JWT_SECRET=amir
 JWT_EXPIRES_IN=7d
